tests/ui/did_you_mean/issue-38054-do-not-show-unresolved-names.rs
use Foo; //~ ERROR unresolved

use Foo1; //~ ERROR unresolved

fn main() {}
